# image_processing_service

./: .env_dist  .gitignore  README.md  docker-compose.yaml  pyproject.toml
image_process_service/: Dockerfile  main.py  pyproject.toml
image_process_service/app/api/: __init__.py
image_process_service/app/api/v1/: image_process.py
image_process_service/app/core/: config.py
image_process_service/app/services/: process_image.py
main_app/: Dockerfile  alembic.ini  main.py  pyproject.toml
main_app/alembic/: env.py
main_app/alembic/versions/: 2024_01_31_1550-6cca222d6165_initial.py
main_app/app/: factory.py
main_app/app/api/v1/: image_process.py
main_app/app/core/: config.py
main_app/app/models/: pipeline.py
main_app/app/repo/: pipeline_repo.py
