[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = ""
authors = ["Daniil <hum4noid@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
