[tool.poetry]
name = "image_process_service"
version = "0.1.0"
description = "Microservice for processing images"
authors = ["Daniil <hum4noid@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic-settings = "^2.0.1"
uvicorn = "^0.27.0"
pydantic = "2.3.0"
asyncpg = "^0.28.0"
SQLAlchemy = "^2.0.17"
gunicorn = "^20.1.0"
python-multipart = "^0.0.6"
aiohttp = "^3.9.3"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
